--- a/css/estilo.css
+++ b/css/estilo.css
@@ -28,3 +28,16 @@ p{
 font-size:1.5em;
         
 }
+
+footer{
+text-align: center;
+background-color:darkblue;
+color:white;    
+
+
+
+}
+a{
+color: white;
+
+}
