--- a/css/estilo.css
+++ b/css/estilo.css
@@ -65,7 +65,9 @@ color: white;
 footer{
 text-align: center;
 background-color:darkblue;
-color:white;    
+color:white;  
+padding-top: 2%;
+padding-bottom: 1%;  
 
 
 
