--- a/css/estilo.css
+++ b/css/estilo.css
@@ -17,27 +17,47 @@ margin: auto;
 
 h1{
     text-align: center;
+    color: white;
+    font-weight: bold;
     font-size: 1.5em;
+    padding-top: 2%;
+    padding-bottom: 2%;
 }
 h2{
     text-align: center;
+    color: white;
+    font-weight: bold;
     font-size: 1.5em;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    
 }
 h3{
     text-align: center;
+    color: white;
+    font-weight: bold;
     font-size: 1.5em;
+    padding-top: 2%;
+    padding-bottom: 2%;
 }
 h4{
     text-align: center;
+    color: white;
+    font-weight: bold;
     font-size: 1.5em;
+    padding-top: 2%;
+    padding-bottom: 2%;
 }
 h5{
     text-align: center;
+    color: white;
+    font-weight: bold;
     font-size: 1.5em;
 }
 p{
     text-align: center;
     font-size: 1.3em;
+    line-height: 1.5;
 }
 figure{
    text-align: center; 
