--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,144 +1,151 @@
-body {
-    background-image: url(https://free4kwallpapers.com/uploads/originals/2020/06/02/marvel-infinity-war-wallpaper.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
-    text-align: center;
-   
-}
 html {
     scroll-behavior: smooth;
 }
-.container{
-width: 80%;
-margin: auto;
-position: relative;
+
+body {
+    background-image: url(https://img.freepik.com/fotos-gratis/galaxia-noturna_23-2148895320.jpg?size=626&ext=jpg&ga=GA1.2.1014162315.1662933637);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    overflow-x: hidden;
 }
 
-h1{
+header {
+    background-color: rgba(0,0,139,0.5);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.fixo {
+    position: fixed;
+    width: 100%;
+    z-index: 1000;
+    top: 0;
+}
+
+.menu {
+    padding: 0.3%;
+    position: relative;
+}
+
+.itens_menu {
     text-align: center;
-    color: white;
+}
+
+.itens_menu li {
+    font-size: 1.3em;
+    padding: 1%;
+    margin: 0.5%;
+    margin-bottom: 1%;
+    text-decoration: none;
+}
+
+.itens_menu a:visited, .itens_menu a:link{
+    color: #FFFF;
+    text-decoration: none;
+    text-shadow: 2px 2px black;
+}
+
+.itens_menu a:hover{
+    background-color: rgba(9, 7, 6, 0.4);
+    padding: 2%;
+}
+
+.img_corpo {
+    width: 70%;
+    margin: 2%;
+    border: 4px solid #00008B;
+}
+
+.container {
+    width: 70%;
+    margin: auto;
+}
+
+h1 {
+    text-align: center;
+    color: 	#7FFF00;
     font-weight: bold;
-    font-size: 1.5em;
+    font-size: 2.5em;
     padding-top: 2%;
     padding-bottom: 2%;
 }
-h2{
+
+h2 {
     text-align: center;
-    color: white;
+    color: 	#9400D3;
     font-weight: bold;
     font-size: 1.5em;
     padding-top: 2%;
     padding-bottom: 2%;
     
 }
-h3{
-    text-align: center;
-    color: white;
-    font-weight: bold;
-    font-size: 1.5em;
-    padding-top: 2%;
-    padding-bottom: 2%;
-}
-h4{
-    text-align: center;
-    color: white;
-    font-weight: bold;
-    font-size: 1.5em;
-    padding-top: 2%;
-    padding-bottom: 2%;
-}
-h5{
-    text-align: center;
-    color: white;
-    font-weight: bold;
-    font-size: 1.5em;
-    padding-top: 2%;
-    padding-bottom: 2%;
-}
 
-h6{
-    text-align: center;
-    color: white;
-    font-weight: bold;
-    font-size: 1.5em;
-    padding-top: 2%;
-    padding-bottom: 2%;
-}
-
-p{
+p {
     text-align: center;
     font-size: 1.3em;
     line-height: 1.5;
-}
-figure{
-   text-align: center; 
+    color: #fff;
 }
 
-
-img{
-width: 50%;
-}
-
-figure{
-text-align: center;
-}
-
-.img_topo{
-width: 50%;
-}
-
-p{
-font-size:1.5em;
-color: white;
-        
-}
-
-footer{
-text-align: center;
-background-color:darkblue;
-color:white;  
-padding-top: 2%;
-padding-bottom: 1%;
-
-
-
-
-
-}
-a{
-color: white;
-
-}
-.img_logo{
-    width: 50%;
-    padding-left: 25%;
-
-
-}
-
-.fixo{
-    position: fixed;
-    padding-left: 20%;
-    background-color: rgba(0, 0, 0, 0.5);
-}
-
-.itens_menu{
+figure {
     text-align: center;
 }
 
-.itens_menu li{
-    font-size: 1.2em;
-    line-height: 1;
+.icone {
+    display: inline;
+    padding: 0.5%;
 }
 
-table{
+.botao{
+    background-color: #7FFF00;
+    border: none;
+    color: #000;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    margin: 1%;
+    width: 100px;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+    border-radius: 2px;
+}
+
+.botao:hover{
+    background-color: #9400D3;
+    color: #fff;
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+.botao a:link, .botao a:visited{
+    color: #9400D3;
+}
+
+footer {
+    text-align: center;
+    background-color:#00008B;
+    color:white;  
+    padding-top: 2%;
+    padding-bottom: 1%;
+}
+
+a {
+    color: white;
+    text-decoration: none;
+}
+
+table {
     width: 100%;
     border-collapse: collapse;
+    color: #fff;
 }
 
 table, th, td {
-    border: 3px dashed #ac7414;
+    border: 3px solid #00008B;
     padding: 1.5%;
     text-align: center;
     font-family: 'Staatliches', cursive;
@@ -147,16 +154,15 @@ table, th, td {
 td:first-child { 
     width: 40%;  
 }
+
 td:first-child + td {  
     width: 60%; 
 }
 
 th{
-
     font-size: 1.5em;
     font-weight: bolder;
     color;  
-
 }
 
 audio{
@@ -164,32 +170,48 @@ audio{
 }
 
 audio::-webkit-media-controls-panel{ 
-    background-color:#ac7414 !important; 
+    background-color:#9400D3 !important; 
 }
 
-input[type=text], select, input[type=email], input[type=submit], input[type=tel], input[type=message] {
-    width: 50%;
+input[type=text], input[type=email], input[type=tel], input[type=date], textarea, select{
+    width: 70%;
     padding: 12px 20px;
     margin: 8px 0;
-    border: 1px solid rgb(0, 0, 0);
+    border: 1px solid #000;
     border-radius: 10px;
     box-sizing: border-box;
     font-family: 'Baloo 2', cursive;
 }
 
+input[type=submit] {
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    background-color: #7FFF00;
+    color: #000;
+    float: right;
+}
+
 input[type=submit]:hover {
-    background-color: darkblue;
-  }
+    background-color: #00008B;
+    color: #fff;
+}
 
 label {
     padding: 12px 12px 12px 0;
     display: inline-block;
- }
+    color: #9400D3;
+}
 
-.form{
+.form {
     border-radius: 15px;
     background-color: #F8F8FF;
-    padding: 10px;
+    padding: 3%;
+    margin-top: 2%;
+    margin-bottom: 2%;
+    margin-left: 10%;
+    margin-right: 10%;
 }
 
 .col-25 {
@@ -213,3 +235,134 @@ label {
 form{
     box-sizing: border-box;
 }
+
+@media screen and (max-width: 600px) {
+
+    .container {
+        width: 90%;
+        margin: auto;
+    }
+
+    .col-25, .col-75, input[typw=submit] {
+        width: 100%;
+        margin-top: 0;
+    }
+    
+    .logo {
+        text-align: center;
+    }
+    
+    .img_logo {
+        width: 12%;
+    }
+    
+    .img_topo{
+        width: 100%;
+    }
+
+    .banner {
+        margin-top: 37.3%;
+        width: 100%;
+    }
+
+    .descer {
+        margin-top: 50%;
+    }
+
+}
+
+@media screen and (min-width: 601px) {
+
+    header {
+        background-color: rgba(0,0,139,0.5);
+        flex-direction: row;
+        padding: 0.5%;
+    }
+
+    .itens_menu {
+        position: absolute;
+        right: 5%;
+        width: 60%;
+    }
+
+    .itens_menu ul li {
+        display: inline;
+        margin: 1%;
+    }
+
+    .itens_menu a:visited, .itens_menu a:link{
+        color: #FFFF;
+        text-decoration: none;
+        font-weight: bolder;
+        text-shadow: 2px 2px black;
+    }
+
+    .itens_menu a:hover{
+        background-color: rgba(9, 7, 6, 0.4);
+        padding: 1%;
+    }
+
+    .img_logo {
+        width: 70%;
+    }
+
+    .logo {
+        width: 20%;
+        text-align: left;
+        margin-left: 4%;
+    }
+    
+    .img_topo{
+        width: 100%;
+    }
+
+    .banner {
+        margin-top: 11.7%;
+    }
+
+    .descer {
+        margin-top: 12%;
+    }
+
+}
+
+@media screen and (max-width: 560px) {
+    
+    .container {
+        width: 100%;
+        margin: auto;
+    }
+
+    .col-25, .col-75, input[typw=submit] {
+        width: 100%;
+        margin-top: 0;
+    }
+    
+    .logo {
+        text-align: center;
+    }
+    
+    .img_logo {
+        width: 12%;
+    }
+    
+    .img_topo{
+        width: 100%;
+    }
+
+    .banner {
+        margin-top: 40%;
+        width: 100%;
+        margin-right: 0;
+    }
+
+    .descer {
+        margin-top: 50%;
+    }
+
+}
+
+
+    
+
+    
